# NuttxFC

./: README.md  rp2040Load.sh
apps/: .gitignore
apps/FlightComputer/: Kconfig  Make.defs  Makefile
apps/FlightComputer/FlightLib/: FlightConfig.h  SensorData.h
apps/FlightComputer/SensorPackage/: Kconfig  Make.defs  Makefile  SensorPackage.cxx
apps/FlightComputer/SensorPackage/ICM42688/: ICM42688.cxx  ICM42688.h
apps/FlightComputer/SensorPackage/LPS25/: LPS25.cxx  LPS25.h
apps/FlightComputer/Shared/: SensorData.h
apps/FlightComputer/StateMachine/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Makefile.old  StateMachine.cxx
apps/FlightComputer/StateMachine/sensors/LPS25/: LPS25.cxx  LPS25.h
apps/FlightComputer/StateMachine/sensors/MAX10S/: GPS_Config.h
apps/FlightComputer/StateMachine/sensors/MMC5983MA/: MMC5983MA.cxx  MMC5983MA.h
apps/FlightComputer/StateMachine/src/: StateMachine.cxx  utility.h
apps/audioutils/: CMakeLists.txt
apps/boot/: CMakeLists.txt
apps/canutils/: CMakeLists.txt
apps/examples/foc/: foc_device.h
apps/examples/hello/: Makefile
apps/fsutils/flash_eraseall/: CMakeLists.txt
apps/fsutils/inifile/: CMakeLists.txt
apps/industry/: CMakeLists.txt
apps/netutils/netlib/: netlib_setipv4addr.c
apps/testing/irtest/: main.cxx
apps/testing/monkey/: monkey_log.c
apps/wireless/bluetooth/btsak/: CMakeLists.txt
nuttx/: .config  .config.old  .config.orig  .gitignore
nuttx/CustomBoards/HPRC_FC/configs/debug/: defconfig
nuttx/CustomBoards/HPRC_SIM/configs/nsh/: defconfig
nuttx/include/nuttx/motor/: a4988.h
(+6 files in other folders)
